# WaifuOS

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
cli/: README.md  pyproject.toml  requirements.txt
cli/src/waifuos_cli/: __init__.py  alias.py  audio.py  cli.py  create.py  script.py  switch.py  update.py
docker/: .env.sample  Dockerfile.aiavatar.app  Dockerfile.chatmemory.app  Dockerfile.sbv2.app  Dockerfile.spgw.app  docker-compose.yaml  init-data.sh
docker/aiavatar/: Dockerfile.aiavatar.app  entities.py  init-db.sh  pipeline.py  prompt.py  requirements.txt  routers.py  run.py  scheduler.py  service.py  system_prompt_base.md  tools.py
docker/aiavatar/static/: aiavatar.js
docker/chatmemory/: Dockerfile.chatmemory.app  init-db.sh  requirements.txt  run.py
docker/db/: Dockerfile.postgres
docker/nginx/: index.html  proxy.conf
docker/pgadmin/: pgadmin-servers.json
docker/sbv2lite/: Dockerfile.sbv2.app  requirements.txt  run.py
docker/sbv2lite/sbv2apilite/: tts.py
docker/speech-gateway/: Dockerfile.spgw.app
document/: api.md
examples/: textchat.py
server/aiavatar/: diary.py  entities.py  memory.py  pipeline.py  prompt.py  routers.py  run.py  service.py  system_prompt_base.md  tools.py
server/aiavatar/static/: index.html
server/chatmemory/: chatmemory.py  requirements.txt  run.py
server/speech-gateway/: requirements.txt  run.py
