[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waifuos"
version = "0.0.0"
description = "The software suite for creating your waifu and the world where your waifu lives.💕"
authors = [{ name = "uezo", email = "uezo@uezo.net" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
